Add user_id column to project personnel table and fix role permissions

--- a/moped-database/metadata/tables.yaml
+++ b/moped-database/metadata/tables.yaml
@@ -2168,6 +2168,125 @@
 - table:
     schema: public
     name: moped_proj_personnel
+  insert_permissions:
+  - role: moped-admin
+    permission:
+      check: {}
+      columns:
+      - join_date
+      - allocation
+      - status
+      - project_id
+      - project_personnel_user_id
+      - project_personnel_id
+      - role_name
+      - role_order
+      - date_added
+      - added_by
+      - notes
+      - user_id
+      backend_only: false
+  - role: moped-editor
+    permission:
+      check: {}
+      columns:
+      - join_date
+      - added_by
+      - allocation
+      - project_id
+      - project_personnel_id
+      - project_personnel_user_id
+      - role_order
+      - user_id
+      - notes
+      - role_name
+      - status
+      - date_added
+      backend_only: false
+  select_permissions:
+  - role: moped-admin
+    permission:
+      columns:
+      - join_date
+      - added_by
+      - allocation
+      - project_id
+      - project_personnel_id
+      - project_personnel_user_id
+      - role_order
+      - user_id
+      - notes
+      - role_name
+      - status
+      - date_added
+      filter: {}
+  - role: moped-editor
+    permission:
+      columns:
+      - join_date
+      - added_by
+      - allocation
+      - project_id
+      - project_personnel_id
+      - project_personnel_user_id
+      - role_order
+      - user_id
+      - notes
+      - role_name
+      - status
+      - date_added
+      filter: {}
+  - role: moped-viewer
+    permission:
+      columns:
+      - join_date
+      - added_by
+      - allocation
+      - project_id
+      - project_personnel_id
+      - project_personnel_user_id
+      - role_order
+      - user_id
+      - notes
+      - role_name
+      - status
+      - date_added
+      filter: {}
+  update_permissions:
+  - role: moped-admin
+    permission:
+      columns:
+      - join_date
+      - added_by
+      - allocation
+      - project_id
+      - project_personnel_id
+      - project_personnel_user_id
+      - role_order
+      - user_id
+      - notes
+      - role_name
+      - status
+      - date_added
+      filter: {}
+      check: null
+  - role: moped-editor
+    permission:
+      columns:
+      - join_date
+      - added_by
+      - allocation
+      - project_id
+      - project_personnel_id
+      - project_personnel_user_id
+      - role_order
+      - user_id
+      - notes
+      - role_name
+      - status
+      - date_added
+      filter: {}
+      check: null
 - table:
     schema: public
     name: moped_proj_phases
