Corrects DevOps pipeline for SQS Deployment

--- a/.github/workflows/atd_sqs_activity_log.yml
+++ b/.github/workflows/atd_sqs_activity_log.yml
@@ -6,7 +6,7 @@ name: "Build & Publish Activity Log SQS"
 on:
   push:
     branches:
-      - master
+      - main
       - production
 
     paths:
