--- a/moped-database/metadata/tables.yaml
+++ b/moped-database/metadata/tables.yaml
@@ -2628,16 +2628,16 @@
       - date_added
       filter: {}
       check: null
-  event_triggers:	
-  - name: activity_log_moped_proj_personnel	
-    definition:	
-      enable_manual: false	
-      insert:	
-        columns: '*'	
-      delete:	
-        columns: '*'	
-      update:	
-        columns:	
+  event_triggers:
+  - name: activity_log_moped_proj_personnel
+    definition:
+      enable_manual: false
+      insert:
+        columns: '*'
+      delete:
+        columns: '*'
+      update:
+        columns:
         - added_by
         - project_id
         - project_personnel_id
@@ -2646,16 +2646,16 @@
         - user_id
         - notes
         - date_added
-    retry_conf:	
-      num_retries: 0	
-      interval_sec: 10	
-      timeout_sec: 60	
-    webhook_from_env: MOPED_API_EVENTS_URL	
-    headers:	
-    - name: MOPED_API_APIKEY	
-      value_from_env: MOPED_API_APIKEY	
-    - value: activity_log	
-      name: MOPED_API_EVENT_NAME      
+    retry_conf:
+      num_retries: 0
+      interval_sec: 10
+      timeout_sec: 60
+    webhook_from_env: MOPED_API_EVENTS_URL
+    headers:
+    - name: MOPED_API_APIKEY
+      value_from_env: MOPED_API_APIKEY
+    - value: activity_log
+      name: MOPED_API_EVENT_NAME
 - table:
     schema: public
     name: moped_proj_phases
@@ -3847,87 +3847,92 @@
     permission:
       check: {}
       columns:
-      - staff_uuid
-      - first_name
-      - last_name
-      - title
-      - workgroup
-      - user_id
-      - workgroup_id
       - cognito_user_id
       - date_added
-      - is_coa_staff
-      - status_id
       - email
+      - first_name
+      - is_coa_staff
+      - last_name
+      - roles
+      - staff_uuid
+      - status_id
+      - title
+      - user_id
+      - workgroup
+      - workgroup_id
       backend_only: false
   select_permissions:
   - role: moped-admin
     permission:
       columns:
-      - is_coa_staff
-      - email
-      - status_id
-      - user_id
-      - workgroup_id
-      - first_name
-      - last_name
-      - title
-      - workgroup
-      - date_added
       - cognito_user_id
+      - date_added
+      - email
+      - first_name
+      - is_coa_staff
+      - last_name
+      - roles
       - staff_uuid
+      - status_id
+      - title
+      - user_id
+      - workgroup
+      - workgroup_id
       filter: {}
       allow_aggregations: true
   - role: moped-editor
     permission:
       columns:
-      - is_coa_staff
-      - email
-      - status_id
-      - user_id
-      - workgroup_id
-      - first_name
-      - last_name
-      - title
-      - workgroup
-      - date_added
       - cognito_user_id
+      - date_added
+      - email
+      - first_name
+      - is_coa_staff
+      - last_name
+      - roles
       - staff_uuid
+      - status_id
+      - title
+      - user_id
+      - workgroup
+      - workgroup_id
       filter: {}
       allow_aggregations: true
   - role: moped-viewer
     permission:
       columns:
-      - is_coa_staff
-      - email
-      - status_id
-      - user_id
-      - workgroup_id
-      - first_name
-      - last_name
-      - title
-      - workgroup
-      - date_added
       - cognito_user_id
+      - date_added
+      - email
+      - first_name
+      - is_coa_staff
+      - last_name
+      - roles
       - staff_uuid
+      - status_id
+      - title
+      - user_id
+      - workgroup
+      - workgroup_id
       filter: {}
       allow_aggregations: true
   update_permissions:
   - role: moped-admin
     permission:
       columns:
-      - is_coa_staff
-      - email
-      - status_id
-      - user_id
-      - workgroup_id
-      - first_name
-      - last_name
-      - title
-      - workgroup
-      - date_added
       - cognito_user_id
+      - date_added
+      - email
+      - first_name
+      - is_coa_staff
+      - last_name
+      - roles
       - staff_uuid
+      - status_id
+      - title
+      - user_id
+      - workgroup
+      - workgroup_id
       filter: {}
       check: null
 - table:
