--- a/moped-editor/package.json
+++ b/moped-editor/package.json
@@ -44,10 +44,14 @@
     "apollo-boost": "^0.4.9",
     "atd-kickstand": "github:cityofaustin/atd-kickstand#c2c305f810fab6a1c1e1e76b8aa6d189e0034547",
     "aws-amplify": "^3.3.4",
-    "axios": "^0.21.0",
+    "axios": "^0.21.1",
     "chart.js": "^2.9.3",
     "clsx": "^1.1.1",
     "env-cmd": "^10.1.0",
+    "filepond": "^3.6.0",
+    "filepond-plugin-file-validate-size": "^2.1.1",
+    "filepond-plugin-image-exif-orientation": "^1.0.3",
+    "filepond-plugin-image-preview": "^3.1.4",
     "formik": "^2.1.5",
     "history": "^5.0.0",
     "lodash.foreach": "^4.5.0",
@@ -62,6 +66,7 @@
     "react-chartjs-2": "^2.10.0",
     "react-dom": "^16.13.1",
     "react-feather": "^2.0.8",
+    "react-filepond": "^7.1.1",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^6.11.1",
     "react-map-gl": "^5.2.10",
