Adds CDN Environment Variable

--- a/moped-editor/.env-cmdrc
+++ b/moped-editor/.env-cmdrc
@@ -6,6 +6,7 @@
     "REACT_APP_HASURA_ENDPOINT": "http://localhost:8080/v1/graphql",
     "REACT_APP_API_ENDPOINT": "http://localhost:5000",
     "REACT_APP_HASURA_ENV": "local",
+    "REACT_APP_AWS_CLOUDFRONT": "https://moped.austinmobility.io",
     "REACT_APP_AWS_COGNITO_REDIRECT_SIGN_IN": "https://localhost:3000/moped/session/signin",
     "REACT_APP_AWS_COGNITO_REDIRECT_SIGN_OUT": "https://localhost:3000/moped/session/signin",
     "REACT_APP_AWS_COGNITO_DOMAIN": "atd-moped-staging.auth.us-east-1.amazoncognito.com",
@@ -18,6 +19,7 @@
     "REACT_APP_HASURA_ENDPOINT": "https://moped-graphql-staging.austinmobility.io/v1/graphql",
     "REACT_APP_API_ENDPOINT": "https://moped-api-staging.austinmobility.io",
     "REACT_APP_HASURA_ENV": "staging",
+    "REACT_APP_AWS_CLOUDFRONT": "https://moped.austinmobility.io",
     "REACT_APP_AWS_COGNITO_REDIRET_SIGN_IN": "https://moped.austinmobility.io/moped/session/signin",
     "REACT_APP_AWS_COGNITO_REDIRECT_SIGN_OUT": "https://moped.austinmobility.io/moped/session/signin",
     "REACT_APP_AWS_COGNITO_DOMAIN": "atd-moped-staging.auth.us-east-1.amazoncognito.com",
@@ -30,6 +32,7 @@
     "REACT_APP_HASURA_ENDPOINT": "https://moped-graphql.austinmobility.io/v1/graphql",
     "REACT_APP_API_ENDPOINT": "https://moped-api.austinmobility.io",
     "REACT_APP_HASURA_ENV": "production",
+    "REACT_APP_AWS_CLOUDFRONT": "https://mobility.austin.gov",
     "REACT_APP_AWS_COGNITO_REDIRECT_SIGN_IN": "https://mobility.austin.gov/moped/session/signin",
     "REACT_APP_AWS_COGNITO_REDIRECT_SIGN_OUT": "https://mobility.austin.gov/moped/session/signin",
     "REACT_APP_AWS_COGNITO_DOMAIN": "atd-moped-production.auth.us-east-1.amazoncognito.com",
