--- a/moped-tools/Dockerfile
+++ b/moped-tools/Dockerfile
@@ -1,11 +1,12 @@
-#
-# Moped Migration Tool
-#
-FROM python:3.8-slim-buster
-# Install MDB Tools
-RUN apt-get update && apt-get install mdbtools -y
-# Install requests for GraphQL access
-RUN pip install requests
+# load python 3.8 dependencies using slim debian 10 image.
+FROM python:3.8-buster
+
+# We will need the Open JRE
+RUN apt-get update \
+ && apt-get install default-jre -y
+
+# Install python requirement libraries
+RUN pip install requests jaydebeapi
 
 COPY . /app
 WORKDIR /app
