--- a/moped-database/metadata/tables.yaml
+++ b/moped-database/metadata/tables.yaml
@@ -4060,13 +4060,21 @@
   - role: moped-admin
     permission:
       columns:
+      - staff_uuid
       - first_name
       - last_name
-      - picture
       - title
-      filter:
-        user_id:
-          _eq: x-hasura-user-db-id
+      - workgroup
+      - user_id
+      - workgroup_id
+      - cognito_user_id
+      - date_added
+      - is_coa_staff
+      - status_id
+      - email
+      - roles
+      - picture
+      filter: {}
       check: null
   - role: moped-editor
     permission:
