--- a/moped-editor/package.json
+++ b/moped-editor/package.json
@@ -64,6 +64,7 @@
     "react-helmet": "^6.1.0",
     "react-hook-form": "^6.11.1",
     "react-map-gl": "^5.2.10",
+    "react-map-gl-draw": "^0.22.3",
     "react-map-gl-geocoder": "^2.1.6",
     "react-perfect-scrollbar": "^1.5.8",
     "react-router": "^6.0.0-beta.0",
