--- a/moped-database/metadata/tables.yaml
+++ b/moped-database/metadata/tables.yaml
@@ -2537,6 +2537,10 @@
 - table:
     schema: public
     name: moped_proj_personnel
+  object_relationships:
+  - name: moped_user
+    using:
+      foreign_key_constraint_on: user_id
   insert_permissions:
   - role: moped-admin
     permission:
